; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/p/extr_core_a2f.c_bbAdd.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/p/extr_core_a2f.c_bbAdd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"bbs\00", align 1
@UT64_MAX = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [4 x i8] c"min\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"max\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64, i64, i64, i64)* @bbAdd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bbAdd(i32* %0, i64 %1, i64 %2, i64 %3, i64 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i64 %1, i64* %7, align 8
  store i64 %2, i64* %8, align 8
  store i64 %3, i64* %9, align 8
  store i64 %4, i64* %10, align 8
  %13 = load i32*, i32** %6, align 8
  %14 = load i64, i64* %7, align 8
  %15 = load i64, i64* %8, align 8
  %16 = call i64 @getCrossingBlock(i32* %13, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i64 %14, i64 %15)
  store i64 %16, i64* %11, align 8
  store i32 1, i32* %12, align 4
  %17 = load i64, i64* %11, align 8
  %18 = load i64, i64* @UT64_MAX, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %5
  br label %57

21:                                               ; preds = %5
  %22 = load i64, i64* %11, align 8
  %23 = load i64, i64* %7, align 8
  %24 = icmp eq i64 %22, %23
  br i1 %24, label %25, label %26

25:                                               ; preds = %21
  store i32 0, i32* %12, align 4
  br label %56

26:                                               ; preds = %21
  %27 = load i64, i64* %7, align 8
  %28 = load i64, i64* %11, align 8
  %29 = icmp sgt i64 %27, %28
  br i1 %29, label %30, label %51

30:                                               ; preds = %26
  %31 = load i32*, i32** %6, align 8
  %32 = load i64, i64* %11, align 8
  %33 = call i32 @Fbb(i64 %32)
  %34 = load i64, i64* %7, align 8
  %35 = call i32 @sdb_num_set(i32* %31, i32 %33, i64 %34, i32 0)
  %36 = load i32*, i32** %6, align 8
  %37 = load i64, i64* %11, align 8
  %38 = call i32 @FbbTo(i64 %37)
  %39 = load i64, i64* %7, align 8
  %40 = call i32 @sdb_num_set(i32* %36, i32 %38, i64 %39, i32 0)
  %41 = load i32*, i32** %6, align 8
  %42 = load i64, i64* %11, align 8
  %43 = call i32 @FbbTo(i64 %42)
  %44 = load i64, i64* %7, align 8
  %45 = call i32 @sdb_array_set_num(i32* %41, i32 %43, i32 0, i64 %44, i32 0)
  %46 = load i32*, i32** %6, align 8
  %47 = load i64, i64* %11, align 8
  %48 = call i32 @FbbTo(i64 %47)
  %49 = load i64, i64* @UT64_MAX, align 8
  %50 = call i32 @sdb_array_set_num(i32* %46, i32 %48, i32 1, i64 %49, i32 0)
  br label %55

51:                                               ; preds = %26
  %52 = load i64, i64* %11, align 8
  store i64 %52, i64* %8, align 8
  %53 = load i64, i64* %11, align 8
  store i64 %53, i64* %9, align 8
  %54 = load i64, i64* @UT64_MAX, align 8
  store i64 %54, i64* %10, align 8
  br label %55

55:                                               ; preds = %51, %30
  br label %56

56:                                               ; preds = %55, %25
  br label %57

57:                                               ; preds = %56, %20
  %58 = load i32, i32* %12, align 4
  %59 = icmp ne i32 %58, 0
  br i1 %59, label %60, label %85

60:                                               ; preds = %57
  %61 = load i32*, i32** %6, align 8
  %62 = load i64, i64* %7, align 8
  %63 = call i32 @sdb_array_add_num(i32* %61, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i64 %62, i32 0)
  %64 = load i32*, i32** %6, align 8
  %65 = load i64, i64* %7, align 8
  %66 = call i32 @Fbb(i64 %65)
  %67 = load i64, i64* %8, align 8
  %68 = call i32 @sdb_num_set(i32* %64, i32 %66, i64 %67, i32 0)
  %69 = load i32*, i32** %6, align 8
  %70 = load i64, i64* %7, align 8
  %71 = call i32 @FbbTo(i64 %70)
  %72 = load i64, i64* %9, align 8
  %73 = call i32 @sdb_array_set_num(i32* %69, i32 %71, i32 0, i64 %72, i32 0)
  %74 = load i32*, i32** %6, align 8
  %75 = load i64, i64* %7, align 8
  %76 = call i32 @FbbTo(i64 %75)
  %77 = load i64, i64* %10, align 8
  %78 = call i32 @sdb_array_set_num(i32* %74, i32 %76, i32 1, i64 %77, i32 0)
  %79 = load i32*, i32** %6, align 8
  %80 = load i64, i64* %7, align 8
  %81 = call i32 @sdb_num_min(i32* %79, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i64 %80, i32 0)
  %82 = load i32*, i32** %6, align 8
  %83 = load i64, i64* %8, align 8
  %84 = call i32 @sdb_num_max(i32* %82, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0), i64 %83, i32 0)
  br label %85

85:                                               ; preds = %60, %57
  ret i32 0
}

declare dso_local i64 @getCrossingBlock(i32*, i8*, i64, i64) #1

declare dso_local i32 @sdb_num_set(i32*, i32, i64, i32) #1

declare dso_local i32 @Fbb(i64) #1

declare dso_local i32 @FbbTo(i64) #1

declare dso_local i32 @sdb_array_set_num(i32*, i32, i32, i64, i32) #1

declare dso_local i32 @sdb_array_add_num(i32*, i8*, i64, i32) #1

declare dso_local i32 @sdb_num_min(i32*, i8*, i64, i32) #1

declare dso_local i32 @sdb_num_max(i32*, i8*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
